# swasthawrap

./: .gitignore  readme.md  sarvam.txt
backend/: config.py  database.py  main.py  pyproject.toml  requirements.txt  test_document_integration.py  test_document_service.py
backend/controllers/: __init__.py  analytics_controller.py  auth_controller.py  chat_controller.py  chatbot_controller.py  dashboard_controller.py  health_controller.py
backend/middlewares/: __init__.py  auth.py
backend/models/: chat.py  dashboard.py  health.py  user.py
backend/routes/: analytics_routes.py  auth_routes.py  chat_routes.py  dashboard_routes.py  health_routes.py
backend/scripts/: create_demo_user.py
backend/services/: analytics_service.py  chat_service.py  dashboard_service.py  document_service.py  file_service.py  health_service.py  openai_service.py  sarvam_service.py  user_service.py
backend/utils/: auth.py  openai_service.py
swasthwrap-frontend/: mock-users-LLYAER1eHPE9pfBDhpy0YInBrVYi4E.tsx  package.json  pnpm-lock.yaml  setup-web3.sh
swasthwrap-frontend/api-list/: API-DEVELOPMENT-WORKFLOW.md  COMPLETE-API-SUMMARY.txt  DATABASE-MODELS.txt  DEVELOPMENT-SEQUENCE.txt  README.md  authentication-apis.txt  chat-ai-apis.txt  dashboard-analytics-apis.txt  health-data-apis.txt  medication-appointment-apis.txt  notification-emergency-apis.txt  settings-preferences-apis.txt
swasthwrap-frontend/app/: layout.tsx  page.tsx
swasthwrap-frontend/components/: ai-chatbot.tsx  auth-form.tsx  chat-history.tsx  (+14 more)
web3-inte/: README.md  STATUS.md  package-lock.json  package.json  setup.sh
(+49 files in other folders)
